--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
        <section class="todo-wrapper">
          <h1 class="todo-title">{{ today.day }}<br>{{ today.date }}</h1>
          <form @keydown.enter.prevent="">
-           <input type="text" class="input-todo" v-bind:class="{ active: new_todo }" placeholder="Take the garbage out" v-model="new_todo" v-on:keyup.enter="addItem">
+           <input type="text" class="input-todo" v-bind:class="{ active: new_todo }" placeholder="Запишите дело" v-model="new_todo" v-on:keyup.enter="addItem">
            <div class="btn btn-add" v-bind:class="{ active: new_todo }"  @click="addItem">+</div>
          </form>
 
          <div v-if="pending.length > 0">
-           <p class="status busy">You have {{ pending.length }} pending item<span v-if="pending.length>1">s</span></p>
+           <p class="status busy">Вы имеете {{ pending.length }} пункт - (ов) на сегодня<span v-if="pending.length>1">s</span></p>
            <transition-group name="todo-item" tag="ul" class="todo-list">
              <li v-for="(item, index) in pending" v-bind:key="item.title">
                <input class="todo-checkbox" v-bind:id="'item_' + item.id" v-model="item.done" type="checkbox">
@@ -29,11 +29,11 @@
          </div>
 
          <transition name="slide-fade">
-           <p class="status free" v-if="!pending.length" ><img src="https://nourabusoud.github.io/vue-todo-list/images/beer_celebration.svg" alt="celebration">Time to chill!  You have no todos.</p>
+           <p class="status free" v-if="!pending.length" ><img src="https://nourabusoud.github.io/vue-todo-list/images/beer_celebration.svg" alt="celebration">Дел нет.</p>
          </transition>
 
          <div v-if="completed.length > 0 && showComplete">
-           <p class="status">Completed tasks: {{ completedPercentage }}</p>
+           <p class="status">Выполнено: {{ completedPercentage }}</p>
            <transition-group name="todo-item" tag="ul" class="todo-list archived">
              <li v-for="(item, index) in completed" v-bind:key="item.title">
                <input class="todo-checkbox" v-bind:id="'item_' + item.id" v-model="item.done" type="checkbox">
@@ -44,8 +44,8 @@
            </transition>
          </div>
          <div class="control-buttons">
-           <div class="btn btn-secondary" v-if="completed.length > 0" @click="toggleShowComplete"><span v-if="!showComplete">Show</span><span v-else>Hide</span> Complete</div>
-           <div class="btn btn-secondary" v-if="todoList.length > 0" @click="clearAll">Clear All</div>
+           <div class="btn btn-secondary" v-if="completed.length > 0" @click="toggleShowComplete"><span v-if="!showComplete">Отобразить</span><span v-else>Скрыть</span> выполненные дела</div>
+           <div class="btn btn-secondary" v-if="todoList.length > 0" @click="clearAll">Очистить всё</div>
          </div>
        </section>
      </div>
