--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          </div>
 
          <transition name="slide-fade">
-           <p class="status free" v-if="!pending.length" ><img src="https://nourabusoud.github.io/vue-todo-list/images/beer_celebration.svg" alt="celebration">Дел нет.</p>
+           <p class="status free" v-if="!pending.length" ><img src="img/pixelicons7.gif" alt="celebration">Дел нет.</p>
          </transition>
 
          <div v-if="completed.length > 0 && showComplete">
@@ -44,7 +44,7 @@
            </transition>
          </div>
          <div class="control-buttons">
-           <div class="btn btn-secondary" v-if="completed.length > 0" @click="toggleShowComplete"><span v-if="!showComplete">Отобразить</span><span v-else>Скрыть</span> выполненные дела</div>
+           <div class="btn btn-secondary" v-if="completed.length > 0" @click="toggleShowComplete"><span v-if="!showComplete">Отобразить</span><span v-else>Скрыть</span> <span>выполненные дела</span></div>
            <div class="btn btn-secondary" v-if="todoList.length > 0" @click="clearAll">Очистить всё</div>
          </div>
        </section>
