--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
          </div>
 
          <transition name="slide-fade">
-           <p class="status free" v-if="!pending.length" ><img src="img/pixelicons7.gif" alt="celebration">Дел нет.</p>
+           <p class="status free" v-if="!pending.length" ><img src="img/579a4bc07d7bf15632b7e802.png" alt="celebration">На сегодня активных дел нет</p>
          </transition>
 
          <div v-if="completed.length > 0 && showComplete">
